// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Truncate component renders correctly 1`] = `
<div>
  <span
    class="LinesEllipsis  Truncate"
  >
    Nulla quis adipisicing fugiat amet occaecat qui quis exercitation elit enim. Culpa nostrud dolore ea ipsum sit non id ullamco aliquip adipisicing Lorem non. Velit nulla adipisicing pariatur adipisicing esse veniam laborum eiusmod reprehenderit ut ipsum incididunt. Reprehenderit ipsum sint mollit officia nostrud anim anim. Veniam aliqua dolor cillum sit in commodo nulla exercitation est veniam veniam qui anim enim. Officia officia eu consectetur dolor ipsum.
    <wbr />
  </span>
</div>
`;

exports[`Truncate component renders with custom component 1`] = `
<div>
  <p
    class="LinesEllipsis  Truncate"
  >
    Nulla quis adipisicing fugiat amet occaecat qui quis exercitation elit enim. Culpa nostrud dolore ea ipsum sit non id ullamco aliquip adipisicing Lorem non. Velit nulla adipisicing pariatur adipisicing esse veniam laborum eiusmod reprehenderit ut ipsum incididunt. Reprehenderit ipsum sint mollit officia nostrud anim anim. Veniam aliqua dolor cillum sit in commodo nulla exercitation est veniam veniam qui anim enim. Officia officia eu consectetur dolor ipsum.
    <wbr />
  </p>
</div>
`;
